# ray_spark_api-

./: Dockerfile  README.md  api_request.py  main.py  pyproject.toml
app/: requirements.txt  spark_job.py
